--- a/public/css/allproducts.css
+++ b/public/css/allproducts.css
@@ -15,6 +15,46 @@ h1 {
     flex-wrap: wrap;
 }
 
+.sort-by, .filter {
+    width: 80vw;
+    border: 3px solid #64d5ca;
+    border-radius: 10px;
+    padding: 30px;
+    display: flex;
+    margin-bottom: 5vh;
+    justify-content: space-between;
+}
+
+.sort-button, .filter-button {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    font-size: 18px;
+}
+
+.sort-button {
+    background: #99cb84;
+}
+
+.filter-button {
+    background: #48bb78;
+}
+
+.sort-button:hover, .filter-button:hover {
+    -webkit-box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.3);
+    box-shadow: 0px 0px 0px 6px rgba(0,0,0,0.3);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.product-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100vw;
+}
+
 .card {
     width: 17vw;
     border-radius: 20px;
