--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,10 @@ body {
     font-family: 'Balsamiq Sans', cursive;
 }
 
+.red {
+    color: #ff0000;
+}
+
 header, footer {
     background: #DCF2CC;
     height: 200px;
@@ -36,4 +40,14 @@ header, footer {
 .menu a:hover {
     transition: 0.5s;
     color: #7CDA7C;
+}
+
+.cat-menu {
+    list-style: none;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 20px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
