--- a/public/css/allproducts.css
+++ b/public/css/allproducts.css
@@ -48,6 +48,13 @@ h1 {
     cursor: pointer;
 }
 
+.dynamic-ajax {
+    display: flex;
+    justify-content: space-between;
+    width: 80vw;
+    flex-wrap: wrap;
+}
+
 .product-list {
     display: flex;
     justify-content: space-between;
