--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,9 +13,52 @@ body {
     font-family: 'Balsamiq Sans', cursive;
 }
 
+/*удалить потом эту секцию <*/
+
 .red {
     color: #ff0000;
 }
+
+.plans {
+    border: 2px solid black;
+    border-radius: 30px;
+    padding: 30px;
+    margin: 75px 30vw;
+    width: 40vw;
+    -webkit-box-shadow: 10px 10px 100px 41px rgba(84,156,114,1);
+    -moz-box-shadow: 10px 10px 100px 41px rgba(84,156,114,1);
+    box-shadow: 10px 10px 100px 41px rgba(84,156,114,1);
+}
+
+.sub-list {
+    margin: 20px 2vw;
+}
+
+.sub-list li {
+    margin-left: 3vw
+}
+
+.plans li {
+    list-style: none;
+}
+
+.completed {
+    color: green;
+}
+
+.completed::before {
+    content: "✔ ";
+}
+
+.not-completed {
+    color: red;
+}
+
+.not-completed::before {
+    content: "✖ ";
+}
+
+/*>*/
 
 header, footer {
     background: #DCF2CC;
